--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,9 +2,9 @@ name: Pylint
 
 on:
   push:
-    branches:
-      - main
-
+    branches: [main] 
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
@@ -12,17 +12,20 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-        pip install -r docker/requirements.txt
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r docker/requirements.txt pylint
+
+      - name: Analyse the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
