--- a/docker/docker-compose.custom.yml
+++ b/docker/docker-compose.custom.yml
@@ -26,7 +26,9 @@ services:
     container_name: poe-cloudflared
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
-    command: tunnel --no-autoupdate --url http://poe-wrapper:8000
+    command: tunnel --no-autoupdate run
+    environment:
+      - TUNNEL_TOKEN=${CLOUDFLARE_TUNNEL_TOKEN}
     networks:
       - poe-network
     depends_on:
